--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -2,4 +2,13 @@
   display: block;
   width: 245px;
   height: 21px;
+  transition: $transition;
+
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
 }
