--- a/source/sass/blocks/presentation.scss
+++ b/source/sass/blocks/presentation.scss
@@ -1,6 +1,6 @@
 .presentation {
   position: relative;
-  z-index: -1;
+  z-index: 0;
   padding: 70px 0 50px;
   background-image: url("../../img/presentation/presentation.jpg");
   background-repeat: no-repeat;
